cabal-version:      >=1.10
name:               logict-sequence
version:            0.1.0.2

-- A short (one-line) description of the package.
synopsis:           A backtracking logic-programming monad with asymptotic improvements to msplit

-- A longer description of the package.
description:        Adapted from the paper
                    <http://okmij.org/ftp/Haskell/zseq.pdf>
                    by Atze van der Ploeg and Oleg Kiselyov
category:           Control
-- A URL where users can report bugs.
bug-reports:        https://github.com/dagit/logict-sequence/issues

-- The license under which the package is released.
license:            MIT
license-file:       LICENSE
author:             Jason Dagit
maintainer:         Jason Dagit <dagitj@gmail.com>
homepage:           https://github.com/dagit/logict-sequence
build-type:         Simple

-- A copyright notice.
copyright: (c) 2021 Jason Dagit,
           (c) 2014 Atze van der Ploeg
-- category:
extra-source-files: CHANGELOG.md
                    README.md
                    include/logict-sequence.h

tested-with: GHC ==7.4.2 GHC ==7.6.3 GHC ==7.8.4 GHC ==7.10.3 GHC ==8.0.2 GHC ==8.2.2 GHC ==8.4.4 GHC ==8.6.5 GHC ==8.8.4 GHC ==8.10.4


source-repository head
  type: git
  location: https://github.com/dagit/logict-sequence

library
    exposed-modules:  Control.Monad.Logic.Sequence
                    , Control.Monad.Logic.Sequence.Internal
                    , Control.Monad.Logic.Sequence.Internal.Queue
                    , Control.Monad.Logic.Sequence.Internal.AsUnitLoop

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends: base >=4.5 && <5
    build-depends: mtl >=2.0 && <2.3
    build-depends: type-aligned >= 0.9.6 && < 0.10
    build-depends: sequence >= 0.9.8 && < 0.10
    build-depends: logict

    if impl(ghc < 8.0)
       build-depends: fail, transformers

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall -O2
    include-dirs: include

benchmark logic-performance
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             logic-performance.hs
  build-depends:       base,
                       mtl,
                       containers,
                       list-t,
                       logict,
                       gauge,
                       logict-sequence
  ghc-options:         -Wall -O2 -threaded
  default-language:    Haskell2010
